[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/RecordPlayerFront/CombinationLock/combination_lock.gd" type="Script" id=1]
[ext_resource path="res://Shared/IBMPlexSans-Light.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 128
font_data = ExtResource( 2 )

[node name="CombinationLock" type="VBoxContainer"]
margin_right = 49.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerDigits" type="HBoxContainer" parent="."]
margin_right = 275.0
margin_bottom = 174.0

[node name="Digit1" type="Button" parent="ContainerDigits"]
margin_right = 89.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "1"

[node name="Digit2" type="Button" parent="ContainerDigits"]
margin_left = 93.0
margin_right = 182.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "2"

[node name="Digit3" type="Button" parent="ContainerDigits"]
margin_left = 186.0
margin_right = 275.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "3"

[node name="ContainerContainer" type="HBoxContainer" parent="."]
margin_top = 178.0
margin_right = 275.0
margin_bottom = 352.0

[node name="ButtonSubtract" type="Button" parent="ContainerContainer"]
margin_right = 63.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 4 )
text = "-"

[node name="ButtonMode" type="Button" parent="ContainerContainer"]
margin_left = 67.0
margin_right = 182.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 5 )
text = "M"

[node name="ButtonAdd" type="Button" parent="ContainerContainer"]
margin_left = 186.0
margin_right = 275.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 6 )
text = "+"
[connection signal="pressed" from="ContainerContainer/ButtonSubtract" to="." method="_on_ButtonSubtract_pressed"]
[connection signal="pressed" from="ContainerContainer/ButtonMode" to="." method="_on_ButtonMode_pressed"]
[connection signal="pressed" from="ContainerContainer/ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
